--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
 <script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
 <script src="/static/app.js"></script>
 <div class="page">
-  <h1>Flaskr</h1>
+  <h1>SyntaQuizzr</h1>
   <div class="metanav">
     <!-- Here login and logout -->
   </div>
